Whitespace fixes. Change layout__content to layout__main.

--- a/sass/components/wireframe/_wireframe.scss
+++ b/sass/components/wireframe/_wireframe.scss
@@ -26,7 +26,7 @@ $with-wireframes: false !default;
   .layout {
     &__header,
     &__footer,
-    &__content,
+    &__main,
     &__navigation,
     &__first-sidebar,
     &__second-sidebar,
